* (bug 18207) Strange spacing before [[irc:...]] links ** fixed regression from r47615

--- a/skins/monobook/main.css
+++ b/skins/monobook/main.css
@@ -565,7 +565,8 @@ table.rimage {
 }
 
 /* correction for ltr wikis */
-.ltr #bodyContent a.external {
+.ltr #bodyContent a.external,
+.ltr #bodyContent a.extiw {
 	padding-left: 0;
 }
 
